[package]
name = "sentinel"
version = "0.1.0"
authors = ["Jaran Charumilind <src@me.jcharum.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "2.0"
reqwest = "0.9.24"
serde = "1.0.110"
serde_derive = "1.0.110"
slack_api = "0.21.0"
toml = "0.5.6"
